--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
 								<a href="#" class="image main"><img src="images/economic.png" alt="" /></a>
 								<p>Exploring the impact of certain economic metrics on Life expectancy in various countries between 2000 and 2019 </p>								
 								<ul class="actions special">
-									<li><a href="#" class="button large">View Project</a></li>
+									<li><a href="https://github.com/SheilaIrags/gapminder_world" class="button large">View Project</a></li>
 								</ul>
 							</article>
 
