--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
 				<!-- Three -->
 					<section class="spotlight style1 orient-left content-align-left image-position-center onscroll-image-fade-in">
 						<div class="content">
-							<h2>Wrangling Twitter acrhives with Python</h2>
+							<h2>Wrangling Twitter archives with Python</h2>
 							<p> Queried Twitter's API using the Tweepy library in Python. Further analyzed the data using pandas, numpy, matplotlib and seaborn libraries.</p>
 							<ul class="actions stacked">
 								<li><a href="https://github.com/SheilaIrags/WeRateDogs_Data_Wrangling" target="_blank" class="button">View project</a></li>
